Changes to proxytunnel version 1.5.x -- not yet released

- Small change to make compiler on tandem/hp-nonstop happy
  by Roberto Veldhoven
- Small change to work around broken proxies by Stephane Engel

Changes to proxytunnel version 1.5.2 -- Fri Dec 16 09:27:11 CET 2005

- Moved some declarations around in ntlm.c to make gcc/openbsd happier

Changes to proxytunnel version 1.5.1 -- Fri Sep 30 12:17:14 CEST 2005

- If you specify a username, but not a password, query the user for
  the password at runtime.
- Removed md[45].[ch] and use functions from openssl

Changes to proxytunnel version 1.5.0 -- Mon Aug 15 12:18:41 CEST 2005

- Allow overriding of NTLM 'DOMAIN', using -t

Changes to proxytunnel version 1.4.0 -- Mon Aug 15 11:40:18 CEST 2005

- Included version-2 of the NTLM patch by Paul Solomon

Changes to proxytunnel version 1.2.3 -- Tue Nov  2 17:03:00 CET 2004

- Patched a possible buffer overflow as reported by Dan Margolis 
  <krispykringle at gentoo dot org> of the Gentoo Security Team

Changes to proxytunnel version 1.2.2 -- Tue Oct 12 16:43:16 CEST 2004

- Added patch from Fred Donck to fix his previous patch, after testing at
  a client with authenticating proxies he found a small problem.

Changes to proxytunnel version 1.2.1 -- Fri Oct  1 08:50:03 CEST 2004

- Added patch by drwr that fixes some compiler warnings and introduces
  Makefile.cc for non-gnu compilers

Changes to proxytunnel version 1.2.0 -- Thu Sep 30 11:22:03 CEST 2004

- Added patch by Fred Donck <fd0 at donck dot com> to store proxy username
  and password in environment variables.

  Security fix
  ------------

  - Modified cmdline.c to allow passing of proxyuser and proxypass as
    environment variables to prevent other users on same machine from
    snooping sensitive info.
    -U for env var that contains the proxy user
    -S for env var that contains the proxy user's password

Changes to proxytunnel version 1.1.4 -- Wed Jun 23 21:05:35 CEST 2004

- Small solaris fix
